# PolyCruise

./: Design.vsdx  InstallTool.sh  README.md  build.sh
APIExtract/lib/: xmlExtr.py  xmlGen.py
APIExtract/xmls/: PyTrace.c.xml
CComponent/LDA/: CMakeLists.txt  README.md  build.sh
CComponent/LDA/lib/: CMakeLists.txt
CComponent/LDA/lib/common/: SoftPara.cpp
CComponent/LDIpass/: Instrumenter.h  LDIpass.cpp  LLVMInst.h
CComponent/SDA/: CMakeLists.txt  build.sh
CComponent/SDA/tools/sda/: CMakeLists.txt  LibEntry.cpp  Main.cpp
CComponent/SDIpass/: CMakeLists.txt  Event.h  HookFunc.h  Instrumenter.h  LLVMInst.h  SDIpass.cpp  SdaBin.h
DynA/: makefile
DynA/include/: Db.h  DbTable.h  DfiEngine.h  DifEngine.h  DifGraph.h  Event.h  EventMsg.h  Graph.h  GraphViz.h  List.h  MacroDef.h  Queue.h
DynA/source/: DbCore.c  DfiEngine.c  DifEngine.c  DynInit.c  DynInstrm.c  DynTrace.c  EventMsg.c  Graph.c  GraphViz.c  List.c  Queue.c
DynAnalyzer/: makefile
DynAnalyzer/include/: Db.h  DbTable.h  DifGraph.h  Event.h  Graph.h  List.h  MacroDef.h  Plugins.h  Queue.h  TypeDef.h
DynAnalyzer/source/: DbCore.c  DifEngine.c  DynInit.c  DynTrace.c  EventMsg.c  Graph.c  GraphViz.c  List.c  Main.c  Plugins.c  Queue.c
Experiments/: criterion.xml  function_sds.xml
Experiments/PoC/: README.md
Experiments/japronto/: setup-instm.py
Experiments/scripts/: unparser.py
LDA/include/: Event.h  ExternalLib.h  Fts.h  LLVMInst.h  (+3 more)
LDA/tools/ldi/: CMakeLists.txt  LibEntry.cpp  Main.cpp
LDIpass/: BS.h  CMakeLists.txt  Event.h  HookFunc.h  Instrumenter.h  LDIpass.cpp  LLVMInst.h  Queue.h  SymDependence.h
PyCBench/: RunTest.sh
PyComponent/: pyinspect.py  setup.py
PyInspect/: Add.py  Analyzer.py  AstRewriter.py  Criterion.py  Demo.py  HandleEvent.py  Inspector.py  ModRewriter.py  PyEvent.py  PyTrans.py  Tracer.py  __init__.py  pyList
PyTrace/: PyTrace.c  makePyTrace.sh
PythonC/: Add.py
Script/: Benchmarks.csv  PyCbenchmarks.csv  RunTest.sh  crawler.py  crawler.sh  criterion.xml  pyinspect.py
Tools/: Benchmarks.csv  New0002.txt  New0003.txt  SD-factor-original.csv  SD-factor.csv  Scalability.csv  draw.py  output.txt  temp.py
Trace/: setup.py
vPlugins/: makefile  plugins.ini
(+548 files in other folders)
